@@ -19,12 +19,17 @@ import fish.focus.uvms.mobileterminal.entity.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
 
 public class PollModelToEntityMapper {
-    private static Logger LOG = LoggerFactory.getLogger(PollModelToEntityMapper.class);
+    private static final Logger LOG = LoggerFactory.getLogger(PollModelToEntityMapper.class);
+
+    private PollModelToEntityMapper() {
+        // hide default public constructor
+    }
 
     public static ProgramPoll mapToProgramPoll(MobileTerminal terminal, String channelGuid, PollRequestType requestType) {
         ProgramPoll programPoll = createPoll(terminal, channelGuid, requestType, ProgramPoll.class);
@@ -50,7 +55,7 @@ public class PollModelToEntityMapper {
                         programPoll.setStopDate(DateUtils.stringToDate(attr.getValue()));
                         break;
                     default:
-                        LOG.debug("ProgramPoll with attr [ " + attr.getKey() + " ] is non valid to map");
+                        LOG.debug("ProgramPoll with attr [ {} ] is non valid to map", attr.getKey());
                 }
             } catch (UnsupportedOperationException | IllegalArgumentException e) {
                 throw new RuntimeException("Poll attribute [ " + attr.getKey() + " ] could not be parsed");
@@ -114,7 +119,7 @@ public class PollModelToEntityMapper {
 
     public static <T extends PollBase> T createPoll(MobileTerminal terminal, String channelGuid, PollRequestType requestType, Class<T> clazz) {
         try {
-            T poll = clazz.newInstance();
+            T poll = clazz.getDeclaredConstructor().newInstance();
             poll.setChannelId(UUID.fromString(channelGuid));
             poll.setMobileterminal(terminal);
             poll.setAssetId(terminal.getAsset() != null ? terminal.getAsset().getId() : null);
@@ -124,7 +129,7 @@ public class PollModelToEntityMapper {
             poll.setPollTypeEnum(EnumMapper.getPollTypeFromModel(requestType.getPollType()));
             poll.setCreateTime(Instant.now());
             return poll;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException("Error when creating Poll instance of type: " + clazz.getTypeName(), e);
         }
     }
